--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <main class="content-wrapper" role="main">
-  <section class="form-container container py-4" aria-labelledby="edit-product-heading">
+  <section class="form-container container py-4 mt-5" aria-labelledby="edit-product-heading">
 
     <!-- Page Heading -->
     <header>
