--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -119,7 +119,7 @@
             <!-- Quantity Input -->
             <div class="col-12">
               <p class="mt-3"><strong>Quantity:</strong></p>
-              <div class="qty-wrapper">
+              <div class="qty-wrapper input-group">
                 <button type="button"
                         class="decrement-qty qty-button"
                         data-item_id="{{ product.id }}"
@@ -136,7 +136,7 @@
                         id="increment-qty_{{ product.id }}">
                   <i class="fas fa-plus"></i>
                 </button>
-              </div>              
+              </div>                       
             </div>
 
             <!-- Buttons -->
