--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -10,9 +10,10 @@
         All Tools
       </a>
       <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="all-tools-link">
-        <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
-        <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
-        <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
+        <a href="{% url 'products' %}?sort=price_asc" class="dropdown-item">By Price (Low to High)</a>
+        <a href="{% url 'products' %}?sort=price_desc" class="dropdown-item">By Price (High to Low)</a>
+        <a href="{% url 'products' %}?sort=rating_desc" class="dropdown-item">By Rating (High to Low)</a>
+        <a href="{% url 'products' %}?sort=category_asc" class="dropdown-item">By Category (A–Z)</a>
         <a href="{% url 'products' %}" class="dropdown-item">All Tools</a>
       </div>
     </li>
@@ -28,7 +29,7 @@
         <a href="{% url 'products' %}?category=drills" class="dropdown-item">Drills</a>
         <a href="{% url 'products' %}?category=saws" class="dropdown-item">Saws</a>
         <a href="{% url 'products' %}?category=sanders" class="dropdown-item">Sanders</a>
-        <a href="{% url 'products' %}?category=drills,saws,sanders" class="dropdown-item">All Power Tools</a>
+        <a href="{% url 'products' %}?category=drills,saws,sanders" class="dropdown-item font-weight-bold">All Power Tools</a>
       </div>
     </li>
 
@@ -42,13 +43,13 @@
       <div class="dropdown-menu border-0 shadow-sm mt-1" aria-labelledby="hand-tools-link">
         <a href="{% url 'products' %}?category=hammers" class="dropdown-item">Hammers & Striking Tools</a>
         <a href="{% url 'products' %}?category=screwdrivers" class="dropdown-item">Screwdrivers</a>
-        <a href="{% url 'products' %}?category=wrenches_and_pliers" class="dropdown-item">Wrenches & Pliers</a>
+        <a href="{% url 'products' %}?category=wrenches" class="dropdown-item">Wrenches & Pliers</a>
         <a href="{% url 'products' %}?category=chisels" class="dropdown-item">Chisels</a>
         <a href="{% url 'products' %}?category=pipe_cutter" class="dropdown-item">Pipe Cutters</a>
         <a href="{% url 'products' %}?category=spirit_level" class="dropdown-item">Spirit Levels</a>
         <a href="{% url 'products' %}?category=tape_measure" class="dropdown-item">Tape Measures</a>
         <a href="{% url 'products' %}?category=hand_saw" class="dropdown-item">Hand Saws</a>
-        <a href="{% url 'products' %}?category=hammers,screwdrivers,wrenches_and_pliers,chisels,pipe_cutter,spirit_level,tape_measure,hand_saw" class="dropdown-item font-weight-bold">All Hand Tools</a>
+        <a href="{% url 'products' %}?category=hammers,screwdrivers,wrenches,chisels,pipe_cutter,spirit_level,tape_measure,hand_saw" class="dropdown-item font-weight-bold">All Hand Tools</a>
       </div>
     </li>
 
